RESOLVED FIXED 24841
Fix linking against QtWebKit for RVCT and Symbian
https://bugs.webkit.org/show_bug.cgi?id=24841
Summary Fix linking against QtWebKit for RVCT and Symbian
Laszlo Gombos
Reported 2009-03-26 07:48:24 PDT
Fix linking against QtWebKit for RVCT and Nokia/Symbian x86 compiler (Carbide) by fixing the EXPORT macros. RVCT and Nokia/Symbian x86 compiler expect similar syntax for marking symbols to be exported as MSVC on WIN. Patch proposal will follow.
Attachments
Fix linking against QtWebKit for RVCT and Symbian (1.07 KB, patch)
2009-03-26 07:54 PDT, Laszlo Gombos
no flags
Revised patch based on feedback received ! (1.68 KB, patch)
2009-03-30 18:11 PDT, Laszlo Gombos
hausmann: review+
Laszlo Gombos
Comment 1 2009-03-26 07:54:41 PDT
Created attachment 28968 [details] Fix linking against QtWebKit for RVCT and Symbian Thanks for Norbert Leser <norbert.leser@nokia.com> for help.
Laszlo Gombos
Comment 2 2009-03-30 18:11:10 PDT
Created attachment 29103 [details] Revised patch based on feedback received ! Instead of white-listing Windows and other platforms, remove the test entirely and apply it to all platforms supported by Qt. Thanks for Kristian Amlie, Norbert Leser and Simon Hausmann for help/feedback !
Simon Hausmann
Comment 3 2009-04-14 13:15:34 PDT
Thanks Laszlo, landed in r42515
Note You need to log in before you can comment on or make changes to this bug.