2009-04-14  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=24841

        Fix linking against QtWebKit for Symbian and other platforms
        where the OS ABI distinguishes between an import or an export situation.

Canonical link: https://commits.webkit.org/34569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42515 268f45cc-cd09-0410-ab3c-d52691b4dbfc