WebKit/qt/Api/qwebkitglobal.h
@@ -22,22 +22,14 @@
 
 #include <QtCore/qglobal.h>
 
-#if defined(Q_OS_WIN)
-#  if defined(QT_NODLL)
-#    undef QT_MAKEDLL
-#    undef QT_DLL
-#  elif defined(QT_MAKEDLL)        /* create a Qt DLL library */
-#    if defined(QT_DLL)
-#      undef QT_DLL
-#    endif
-#    if defined(BUILD_WEBKIT)
-#        define QWEBKIT_EXPORT Q_DECL_EXPORT
-#    else
-#        define QWEBKIT_EXPORT Q_DECL_IMPORT
-#    endif
-#  elif defined(QT_DLL) /* use a Qt DLL library */
-#    define QWEBKIT_EXPORT Q_DECL_IMPORT
+#if defined(QT_MAKEDLL)        /* create a Qt DLL library */
+#  if defined(BUILD_WEBKIT)
+#      define QWEBKIT_EXPORT Q_DECL_EXPORT
+#  else
+#      define QWEBKIT_EXPORT Q_DECL_IMPORT
 #  endif
+#elif defined(QT_DLL) /* use a Qt DLL library */
+#  define QWEBKIT_EXPORT Q_DECL_IMPORT
 #endif
 
 #if !defined(QWEBKIT_EXPORT)
